# UnityEnvDataDecoder

./: README.md  setup.cfg  setup.py
COG/: CogEnvDecoder.py
COG.egg-info/: PKG-INFO  SOURCES.txt
UnityEnvDataDecoder/: CogEnvDecoder.py
