[metadata]
name = COG
version = 0.0.1
author = Haoran Li
author_email = lihaoran2015@ia.ac.cn
description = COG virtual environment data decoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/1019388642/UnityEnvDataDecoder
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >= 3.7
